--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Portfolio Project</h1>
-    <p>Olha Kostina</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>👋Hello, I am</p>
+      <h1>Olha Kostina</h1>
+      <h2 class="mb-5">Front-end developer, based in Ukraine</h2>
+      <div><a href="#" class="btn btn-branding">Contact me</a></div>
+    </div>
   </body>
 </html>
