--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="hero">
       <p>👋Hello, I am</p>
       <h1>Olha Kostina</h1>
-      <h2 class="mb-5">Front-end developer, based in Ukraine</h2>
+      <h2 class="mb-5">Frontend developer, based in Ukraine</h2>
       <div><a href="#" class="btn btn-branding">Contact me</a></div>
     </div>
     <p class="text-center m-5">
