--- a/work.html
+++ b/work.html
@@ -30,22 +30,39 @@
   </head>
   <body>
     <div class="container content-section">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">Hi I am Olha Kostina</h1>
-            <h2 class="mb-4">Frontend Developer, based in Ukraine.</h2>
-            <p class="mb-5 text-muted">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="#" class="btn btn-branding">View my projects</a>
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-5">
+            <img src="/images/yogurt.png" class="img-fluid rounded" alt="" />
+            <h3 class="text-center">Yogurt Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-5">
+            <img src="/images/weather.png" class="img-fluid rounded" alt="" />
+            <h3 class="text-center">Weather Project</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and JS</p>
           </div>
         </div>
-        <div class="col-lg-6">
-          <img src="/images/Patricia.png" alt="" class="img-fluid rounded" />
+        <div class="row">
+          <div class="col-md-6 mb-5">
+            <img
+              src="/images/dictionary.png"
+              class="img-fluid rounded"
+              alt=""
+            />
+            <h3 class="text-center">Dictionary App</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and React</p>
+          </div>
+          <div class="col-md-6 mb-5">
+            <img
+              src="/images/trahslation.png"
+              class="img-fluid rounded"
+              alt=""
+            />
+            <h3 class="text-center">Translation App</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and React</p>
+          </div>
         </div>
       </div>
     </div>
