--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/style.css" />
@@ -35,18 +35,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
-          <img
-            src="images/logo.png"
-            class="logo d-none d-md-block"
-            alt="SheCodes logo"
-          />
-          <img
-            src="images/logo-small.jpg"
-            class="logo d-block d-md-none"
-            alt="SheCodes logo"
-          />
-        </a>
+        <a href="/" title="Homepage" class="name"> Olha Kostina </a>
         <ul>
           <li>
             <a href="/" title="Homepage">Home</a>
@@ -81,7 +70,12 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="/images/Patricia.png" alt="" class="img-fluid rounded" />
+          <img
+            src="/images/Olha.png"
+            alt="Olha portrait"
+            class="img-fluid"
+            width="500"
+          />
         </div>
       </div>
       <footer>
