--- a/about.html
+++ b/about.html
@@ -96,6 +96,141 @@
           />
         </div>
       </div>
+      <div class="skills-container container mt-5 text-center">
+        <div class="skillset-content">
+          <div class="row pb-0">
+            <div class="col-lg-12 mb-3">
+              <h3>My Skillset</h3>
+            </div>
+          </div>
+          <ul>
+            <li class="list-inline-item">
+              <img
+                src="/images/html-logo.png"
+                alt="HTML"
+                class="img-fluid mx-auto d-block skills-logo"
+              />
+              <p class="skills">HTML</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/css-logo.png"
+                alt="CSS"
+                class="img-fluid mx-auto d-block skills-logo"
+              />
+              <p class="skills">CSS</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/javascript-logo.png"
+                alt="JavaScript"
+                class="img-fluid skills-logo"
+              />
+              <p class="skills">JavaScript</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/editor-logo.png"
+                alt="VS Code"
+                class="img-fluid skills-logo"
+              />
+              <p class="skills">Editor</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/api-logo.png"
+                alt="API"
+                class="img-fluid mx-auto d-block skills-logo"
+              />
+              <p class="skills">API</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/bootstrap.png"
+                alt="Bootstrap"
+                class="img-fluid mx-auto d-block skills-logo"
+              />
+              <p class="skills">Bootstrap</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/github-logo.png"
+                alt="GitHub"
+                class="img-fluid mx-auto d-block skills-logo"
+              />
+              <p class="skills">GitHub</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/netlify-logo.png"
+                alt="Netlify"
+                class="img-fluid mx-auto d-block skills-logo"
+              />
+              <p class="skills">Hosting</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/flexbox-logo.png"
+                alt="Flexbox"
+                class="img-fluid mx-auto d-block skills-logo"
+              />
+              <p class="skills">Flexbox</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/seo.png"
+                alt="SEO"
+                class="img-fluid skills-logo"
+              />
+              <p class="skills">SEO</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/responsive-logo.png"
+                alt="Responsive"
+                class="img-fluid mx-auto d-block skills-logo"
+              />
+              <p class="skills">Responsive</p>
+            </li>
+            <li class="list-inline-item">
+              <img
+                src="/images/react-logo.png"
+                alt="React"
+                class="img-fluid mx-auto d-block skills-logo"
+              />
+              <p class="skills">React</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row pb-0">
+        <div class="col-lg-12 mb-3 text-center">
+          <h3>My Certificates</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <img
+            src="images/SheCodes_Basic.png"
+            alt="Certificate of Olha - SheCodes Basic"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-4">
+          <img
+            src="images/SheCodes_Plus.png"
+            alt="Certificate of Olha - SheCodes Plus"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-4">
+          <img
+            src="images/result-3.png"
+            alt="Certificate of Olha - SheCodes Responsive"
+            class="img-fluid"
+          />
+        </div>
+      </div>
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
