--- a/about.html
+++ b/about.html
@@ -75,12 +75,11 @@
         <div class="col-lg-6">
           <div class="content">
             <h1 class="mb-4">Hi, I am Olha</h1>
-            <h2 class="mb-4">Frontend Developer, based in Ukraine.</h2>
+            <h2 class="mb-4">Front-end developer from Ukraine</h2>
             <p class="mb-5 text-muted">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              I'm currently seeking new opportunities in front-end development.
+              I'm open to work remotely and have flexible hours. I would love to
+              be a member of your team and work on interesting projects.
             </p>
             <a href="/work.html" class="btn btn-branding" title="My projects"
               >View my projects</a
@@ -251,7 +250,7 @@
             href="mailto:olhakostina@gmail.com"
             class="email-link"
             title="Email Olha"
-            >olhakostina@gmail.com"</a
+            >olhakostina@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
