--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
             href="mailto:olhakostina@gmail.com"
             class="email-link"
             title="Email Olha"
-            >olhakostina@gmail.com"</a
+            >olhakostina@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
