--- a/index.html
+++ b/index.html
@@ -73,38 +73,43 @@
     <div class="hero">
       <p>👋Hello, I am</p>
       <h1>Olha Kostina</h1>
-      <h2 class="mb-5">Frontend developer, based in Ukraine</h2>
+      <h2 class="mb-5">Front-end developer based in Kharkiv, Ukraine</h2>
       <div>
         <a href="/contact.html" class="btn btn-branding" title="Contact me"
           >Contact me</a
         >
       </div>
     </div>
-    <p class="text-center m-5">
-      Featured Project which my best projects be choice to show
-    </p>
+    <div class="project-header">
+      <h2 class="mb-3 title">Featured Works</h2>
+      <h4 class="mb-5 text-muted">
+        Here are some of my fovourite projects I have done lately. Feel free to
+        check them out.
+      </h4>
+    </div>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
-            src="/images/yogurt.png"
+            src="/images/landing-page.jpg"
             class="img-fluid"
-            alt="Yogurt project preview"
+            alt="landing-page preview"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Basic Landing Page</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Basic landing page dedicated to minimalistic interiors. The user
+              can find more inspiration and book a designer to create own
+              minimalist interior. This page was completed as part of the
+              SheCodes Basics course. Built with HTML, CSS, and JavaScript.
             </p>
             <a
-              href="/work.html"
+              href="https://www.shecodes.io/workshops/shecodes-basics-7949bf94-9bab-4f69-b7ec-84552c72b8ff/projects/849528"
               class="btn btn-branding-outline"
               title="Learn more"
+              target="_blank"
               >Learn more</a
             >
           </div>
@@ -115,15 +120,23 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              A real-time weather application that allows the user to search for
+              the weather and 5-day forecast in any location. This application
+              was completed as part of the SheCodes Plus course. Built with
+              HTML, CSS, JavaScript, API, and Bootstrap. It has been developed
+              by using OpenWeather API and also Google Places API to provide us
+              suggestions for any city.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+            <a
+              href="https://dancing-moxie-4ec6cc.netlify.app/"
+              class="btn btn-branding-outline"
+              title="Learn more"
+              target="_blank"
+              >Learn more</a
+            >
           </div>
         </div>
-        <div class="col d-none d-lg-block">
+        <div class="col d-none d-lg-block mt-5">
           <img
             src="/images/weather.png"
             class="img-fluid"
@@ -177,7 +190,7 @@
             href="mailto:olhakostina@gmail.com"
             class="email-link"
             title="Email Olha"
-            >olhakostina@gmail.com"</a
+            >olhakostina@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
