--- a/work.html
+++ b/work.html
@@ -76,14 +76,14 @@
         <div class="row">
           <div class="col-md-6 mb-5">
             <img
-              src="/images/yogurt.png"
+              src="/images/landing-page.jpg"
               class="img-fluid rounded"
               alt="Yogurt project preview"
             />
             <h3 class="text-center">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-          <div class="col-md-6 mb-5">
+          <div class="col-md-6 mt-5 pt-3">
             <img
               src="/images/weather.png"
               class="img-fluid rounded"
@@ -134,7 +134,7 @@
             href="mailto:olhakostina@gmail.com"
             class="email-link"
             title="Email Olha"
-            >olhakostina@gmail.com"</a
+            >olhakostina@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
