Edited colors and CSS

--- a/about.html
+++ b/about.html
@@ -275,12 +275,13 @@
             ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
-        <p class="text-center text-muted mt-5">
+        <p class="text-center text-muted mt-5 code">
           This project was coded by Olha Kostina and it's
           <a
             href="https://github.com/OlhaKostina/Portfolio"
             target="_blank"
             title="GitHub"
+            class="social"
             >open-sourced</a
           >
         </p>
