--- a/contact.html
+++ b/contact.html
@@ -75,20 +75,27 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:olhakostina@gmail.com">olhakostina@gmail.com</a>
+          <a href="mailto:olhakostina@gmail.com" class="social"
+            >olhakostina@gmail.com</a
+          >
         </p>
         <h3>Linkedin</h3>
         <p>
           <a
             href="https://www.linkedin.com/in/olha-kostina-8b7a44a4/"
             target="_blank"
+            class="social"
           >
             Olha Kostina</a
           >
         </p>
         <h3>Instagram</h3>
         <p>
-          <a href="https://www.instagram.com/koskairos/" target="_blank">
+          <a
+            href="https://www.instagram.com/koskairos/"
+            target="_blank"
+            class="social"
+          >
             Olha Kostina</a
           >
         </p>
@@ -138,12 +145,13 @@
             ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
-        <p class="text-center text-muted mt-5">
+        <p class="text-center text-muted mt-5 code">
           This project was coded by Olha Kostina and it's
           <a
             href="https://github.com/OlhaKostina/Portfolio"
             target="_blank"
             title="GitHub"
+            class="social"
             >open-sourced</a
           >
         </p>
