--- a/work.html
+++ b/work.html
@@ -80,16 +80,32 @@
               class="img-fluid rounded"
               alt="Yogurt project preview"
             />
-            <h3 class="text-center">Yogurt Project</h3>
+            <h3 class="text-center">
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-basics-7949bf94-9bab-4f69-b7ec-84552c72b8ff/projects/849528"
+                target="_blank"
+                title="Landing page"
+              >
+                Basic Landing Page</a
+              >
+            </h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-          <div class="col-md-6 mt-5 pt-3">
+          <div class="col-md-6 mb-5">
             <img
-              src="/images/weather.png"
+              src="/images/weather2.jpg"
               class="img-fluid rounded"
               alt="Weather App preview"
             />
-            <h3 class="text-center">Weather Project</h3>
+            <h3 class="text-center">
+              <a
+                href="https://dancing-moxie-4ec6cc.netlify.app/"
+                target="_blank"
+                title="Weather app"
+              >
+                Weather App
+              </a>
+            </h3>
             <p class="text-center text-muted">Built with HTML, CSS and JS</p>
           </div>
         </div>
@@ -159,12 +175,13 @@
             ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
-        <p class="text-center text-muted mt-5">
+        <p class="text-center text-muted mt-5 code">
           This project was coded by Olha Kostina and it's
           <a
             href="https://github.com/OlhaKostina/Portfolio"
             target="_blank"
             title="GitHub"
+            class="social"
             >open-sourced</a
           >
         </p>
