--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
         <div class="col d-none d-lg-block mt-5">
           <img
-            src="/images/weather.png"
+            src="/images/weather.jpg"
             class="img-fluid"
             alt="Weather app preview"
           />
@@ -215,12 +215,13 @@
             ><i class="fa-brands fa-instagram"></i
           ></a>
         </div>
-        <p class="text-center text-muted mt-5">
+        <p class="text-center text-muted mt-5 code">
           This project was coded by Olha Kostina and it's
           <a
             href="https://github.com/OlhaKostina/Portfolio"
             target="_blank"
             title="GitHub"
+            class="social"
             >open-sourced</a
           >
         </p>
