--- a/about.html
+++ b/about.html
@@ -210,21 +210,21 @@
       <div class="row">
         <div class="col-md-4">
           <img
-            src="images/SheCodes_Basic.png"
+            src="/images/SheCodes_Basic.png"
             alt="Certificate of Olha - SheCodes Basic"
             class="img-fluid"
           />
         </div>
         <div class="col-md-4">
           <img
-            src="images/SheCodes_Plus.png"
+            src="/images/SheCodes_Plus.png"
             alt="Certificate of Olha - SheCodes Plus"
             class="img-fluid"
           />
         </div>
         <div class="col-md-4">
           <img
-            src="images/result-3.png"
+            src="/images/SheCodes_Responsive.png"
             alt="Certificate of Olha - SheCodes Responsive"
             class="img-fluid"
           />
